--- a/upload/admin/view/stylesheet/stylesheet.css
+++ b/upload/admin/view/stylesheet/stylesheet.css
@@ -303,6 +303,14 @@ span.hidden-xs, span.hidden-sm, span.hidden-md, span.hidden-lg {
 }
 }
 /* Mobile */
+@media (max-width: 768px) {
+#ocshop-search-div {
+	display: none;
+}
+#header .nav.pull-left{
+  margin-left: -15px;
+}
+}
 @media (max-width: 767px) {
 #column-left.active + #content {
 	position: relative;
@@ -461,6 +469,174 @@ input[type="checkbox"]:checked::after, .checkbox input[type="checkbox"]:checked:
 
 .pagination {
 	margin: 0;
+}
+
+/* search */
+
+select, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
+    height: 35px !important;
+    margin-bottom: 0px !important;
+}
+
+#ocshop-search{
+    padding: 0;
+    margin: 0;
+}
+
+#ocshop-search .btn-default {
+  color: #fff;
+  font-size: 13px;
+  padding-top: 8px;
+}
+
+#ocshop-search .caret{
+    margin: 0 0 0 10px;
+}
+
+#ocshop-search .input-group{
+    width: 100%;
+}
+
+#ocshop-search .input-group-addon, #ocshop-search .input-group-btn {
+    width: 1% !important;
+}
+
+#ocshop-search .btn {
+  background: #585858 none repeat scroll 0 0;
+  border: 0 none !important;
+  border-radius: 0 !important;
+  box-shadow: none !important;
+  height: 35px !important;
+  margin-top: 5px;
+}
+
+#ocshop-search input {
+  background: #fff none repeat scroll 0 0;
+  border-color: #585858;
+  box-shadow: none !important;
+  color: #373737 !important;
+  height: 35px !important;
+  margin-bottom: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+  margin-top: 5px;
+  padding-top: 9px;
+}
+
+#ocshop-search input::-webkit-input-placeholder {
+    color:#f8f8f8 !important;
+    opacity: 0.7;
+    text-shadow: none;
+}
+#ocshop-search input:-moz-placeholder {
+    color:#f8f8f8 !important;
+    opacity: 0.7;
+    text-shadow: none;
+}
+#ocshop-search input::-moz-placeholder{
+    color:#6d6d6d !important;
+    opacity: 0.7;
+    text-shadow: none;
+}
+#ocshop-search input:-ms-input-placeholder {
+    color:#f8f8f8 !important;
+    opacity: 0.7;
+    text-shadow: none;
+}
+
+#ocshop-search ul li a span {
+    margin-left: 8px;
+}
+
+#ocshop-search ul li a{
+    color: #7C7A7A;
+    cursor: pointer;
+}
+
+#ocshop-search ul li a:hover{
+    color: #f8f8f8;
+    background-color: #008DB9;
+}
+
+#ocshop-search-div{
+    padding-left: 1px !important;
+    padding-right: 0 !important;
+}
+
+#ocshop-search-result {
+    display: none;
+    position: absolute;
+    padding: 5px 0;
+    padding-right: 15px;
+    margin: 2px 0 0;
+    list-style: none;
+    font-size: 12px;
+    text-align: left;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    border-radius: 3px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    background-clip: padding-box;
+    z-index: 999;
+    width: 100%;
+    min-width: 347px;
+}
+
+#ocshop-search-result ul {
+    margin: 10px;
+    padding: 0;
+}
+
+#ocshop-search-result ul .result-header {
+    margin: 10px 0px;
+    display: block;
+    padding: 0;
+    font-size: 12px;
+    line-height: 1.42857143;
+    color: #777777;
+    white-space: nowrap;
+    border-bottom: 1px solid #E8E7E7;
+}
+
+#ocshop-search-result ul li {
+    list-style: none;
+}
+
+#ocshop-search-result ul li a {
+    text-decoration: none;
+    color : #777777;
+    line-height: 30px;
+    border-bottom: 1px solid #FAF8F8;
+}
+
+#ocshop-search-result ul li a:hover {
+    background: #f8f8f8;
+}
+
+#ocshop-search-result ul li a img{
+    float: left;
+}
+
+#ocshop-search-result ul li a i {
+    float: left;
+    line-height: 30px;
+}
+
+#ocshop-search-result ul li a span{
+    float: left;
+    white-space: nowrap;
+    margin-left: 10px;
+    vertical-align: top;
+}
+
+#loader-search {
+    display: none;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    z-index: 999;
 }
 
 /* Panels */
